2001-04-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k29

	* html/miscopt.htm: Document the "allan" tinker variable.
	* ntpd/ntp_proto.c (clock_filter): Update comments.  Lose etemp;
	we now use allan_xpt for this.
	* ntpd/ntp_loopfilter.c: Added allan_xpt as a tinker variable.
	Reorganize variables and improve comments.
	(local_clock): Improve comments, use (new) allan_xpt instead of
	CLOCK_ALLAN.  Fix test in S_SYNC state.  Update debug info.
	(rstclock): No longer force allan_xpt to CVLOCK_ALLAN in S_FREQ,
	S_SYNC, or default case.
	(loop_config): Document dangerous tinker variables, and add
	LOOP_ALLAN to the list.
	* include/ntp_config.h (CONF_CLOCK_ALLAN): Added.
	* include/ntp.h (LOOP_ALLAN): Added.
	Allan intercept fixes from Dave Mills.

	* scripts/mkver.in: Use the C locale so  the dates come out in a
	consistent format.
	From: ASANO Naoyuki <n_asano@imjp.co.jp>

	* build: Run "config.status" before the "make" because it probably
	saves time and trouble.  Probably...

	* flock-build: Try building sequentially.

2001-04-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_make_tickadj): Fix it right...

	* util/ntp-genkeys.c: extern config_netinfo, too.

	* util/hist.c:
	* ntptrace/ntptrace.c:
	* ntpq/ntpq.c:
	* ntpdc/ntpdc.c:
	* ntpdate/ntptimeset.c:
	* ntpdate/ntpdate.c:
	* ntpd/refclock_parse.c:
	* ntpd/refclock_msfees.c:
	* ntpd/refclock_jupiter.c:
	* ntpd/ntp_refclock.c:
	* ntpd/ntp_io.c:
	* libparse/clk_wharton.c:
	* libparse/clk_varitext.c:
	* libparse/clk_trimtaip.c:
	* libparse/clk_schmid.c:
	* libparse/clk_rcc8000.c:
	* libparse/clk_rawdcf.c:
	* libparse/clk_meinberg.c:
	* libparse/clk_hopf6021.c:
	* libparse/clk_dcf7000.c:
	* libparse/clk_computime.c:
	Lint.  From: Simon Burge <simonb@wasabisystems.com>

2001-04-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_nmea.c (nmea_receive): Fixes.
	From: John Woolner <vk1et@tpg.com.au>

	* util/ntp-genkeys.c: Declare check_netinfo, don't define it.